More Content Added
Added additional texts, and adjusted design

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="edited_logo.ico" type="image/x-icon">
 
+    <!-- Importing a google font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
     <title>
       Jacobs Lounge
     </title>
@@ -27,12 +32,21 @@
   </nav>
   
    
-  <h1 class="title-text">
-    Welcome to my Website 
-  </h1>
-  <img class ="main-image-style" src="background_image">
-  <p class="text-style">testing one two three</p>
 
+  <div class="main-image-div">
+    <img class ="main-image-style" src="background_image">
+    <h1 class="main-image-text">Home</h1>
+  </div>
+
+
+  <div class="about-me-div">
+    <img class= "about-me-image" src="headshot.png">
+    <p class="about-me-text">
+      Howdy, my name is Jacob Jones, and I am a computer science major preparing for my Junior Year.
+      
+    </p>
+  </div>
+  
 
   <!-- at bottom due as good practice-->
   <script></script>
