--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="edited_logo.ico" type="image/x-icon">
 
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>
       Jacobs Lounge
     </title>
@@ -16,7 +20,6 @@
 <!--<img  src="background_image.jpeg" alt="Coding">-->
 <!-- Everything that is visible on the page will go inside of the body element-->
 <body>
-  
   <nav>
     <label class ="logo">Jacob's Lounge</label>
     <ul>  
@@ -26,12 +29,21 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
+  
    
-  <h1 class="title-text">
-    Projects
-  </h1>
-  <img class ="main-image-style" src="background_image">
-  <p class="text-style">My projects go here</p>
+
+  <div class="main-image-div">
+    <img class ="main-image-style" src="background_image">
+    <h1 class="main-image-text">Projects</h1>
+  </div>
+
+  <h2 class = "title-text">Personal Website</h2>
+  <p class="text-style"> The website you are currently viewing was coded from scratch by yours truly.
+    Primarily using HTML and CSS, while I haven't been using these two launguages very long I did learn my 
+    skills from readings written by Jon Duckett, and various other sources. 
+  </p>
+  
+  
 
 
   <!-- at bottom due as good practice-->
