Bug Fixes, Page Changes
Navigation bar is finished. Further styling of home page, and added borders to the design

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
     <h1 class="main-image-text">Home</h1>
   </div>
 
-
+  <h2 class = "title-text"> About Me</h2>
   <div class="about-me-div">
-    <img class= "about-me-image" src="headshot.png">
+    <div class =  "image-box">
+      <img class= "about-me-image" src="headshot.png">
+    </div>
+    
     <p class="about-me-text">
       Howdy, my name is Jacob Jones, and I am a computer science major preparing for my Junior Year.
       
