--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,10 @@
   <nav>
     <label class ="logo">Jacob's Lounge</label>
     <ul>  
-      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="resume.html">Resume</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a  href="projects.html">Projects</a></li>
+      <li><a class="active" href="contact.html">Contact</a></li>
     </ul>
   </nav>
   
