Added More Content
added more informational content to the website

--- a/contact.html
+++ b/contact.html
@@ -34,12 +34,20 @@
 
   <div class="main-image-div">
     <img class ="main-image-style" src="background_image">
-    <h1 class="main-image-text">Home</h1>
+    <h1 class="main-image-text">Contact</h1>
   </div>
+
+  <ul>  
+    <li><p class="contact-text-style"><b>Email:</b> genjacob20@gmail.com</p></li>
+    <li><p class="contact-text-style"><b>Phone:</b> 361-460-2493</p></li>
+    <li><p class="contact-text-style"><b>Github:</b> future github link</p></li>
+    <li><p class="contact-text-style"><b>LinkedIN:</b> LinkedIn LInk</p></li>
+    
+  </ul>
+  
 
   
   
-  <p class="text-style">testing one two three</p>
 
 
   <!-- at bottom due as good practice-->
