--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
     </div>
     
     <p class="about-me-text">
-      Howdy, my name is Jacob Jones, and I am a computer science major preparing for my Junior Year.
+      Howdy, my name is Jacob Jones, and I am a computer science major preparing for my Junior Year. Some current projects of mine include a Virtual Assistant,
+      a Sound board GUI with a dynamic Key-binding system, and this website your looking at now! I'm truly hoping to start a career as a software developer 
+      for Amazon, or any forward thinking company. 
       
     </p>
   </div>
-  
 
   <!-- at bottom due as good practice-->
   <script></script>
