--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,19 @@
     Primarily using HTML and CSS, while I haven't been using these two launguages very long I did learn my 
     skills from readings written by Jon Duckett, and various other sources. 
   </p>
+
+  <h2 class = "title-text">Project C.I.M </h2>
+  <p class="text-style"> 
+    CIM is being developed to become a voice activated assistant, and currently can complete tasks such as voice 
+    dictation, searching on the internet, etc. The end goal is for CIM to be a an assistive programming tool. CIM 
+    has so far been written in Python, using libraries such as speech_recognition, pysttx3, etc.
+  </p>
+
+  <h2 class = "title-text">Sound Board</h2>
+  <p class="text-style"> 
+    The sound board was written using pythons tkinter library to create a GUI interface with a dynamic keybind system.
+    We used the keybind system to bind various keys to user given sounds. Additionally,
+  </p>
   
   
 
