--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
   <head>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="edited_logo.ico" type="image/x-icon">
+    <link rel="icon" href="images/updatedlogo.ico" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +33,7 @@
    
 
   <div class="main-image-div">
-    <img class ="main-image-style" src="background_image">
+    <img class ="main-image-style" src="images/background_image">
     <h1 class="main-image-text">Contact</h1>
   </div>
 
