--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="edited_logo.ico" type="image/x-icon">
+    <link rel="icon" href="images/updatedlogo.ico" type="image/x-icon">
 
     <!-- Importing a google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,14 +34,14 @@
    
 
   <div class="main-image-div">
-    <img class ="main-image-style" src="background_image">
+    <img class ="main-image-style" src="images/background_image">
     <h1 class="main-image-text">Home</h1>
   </div>
 
   <h2 class = "title-text"> About Me</h2>
   <div class="about-me-div">
     <div class =  "image-box">
-      <img class= "about-me-image" src="headshot.png">
+      <img class= "about-me-image" src="images/headshot.png">
     </div>
     
     <p class="about-me-text">
