updated projects page
used css grid to make a clean projects page.

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,8 @@
 <html style="background-color: rgb(24, 23, 23);">
 
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/contact.css">
+    <link rel="stylesheet" href="styles/general.css">
     <link rel="icon" href="images/updatedlogo.ico" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
