--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,8 @@
 <html style="background-color: rgb(24, 23, 23);">
 
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/projects.css">
+    <link rel="stylesheet" href="styles/general.css">
     <link rel="icon" href="images/updatedlogo.ico" type="image/x-icon">
 
 
@@ -37,24 +38,43 @@
     <h1 class="main-image-text">Projects</h1>
   </div>
 
-  <h2 class = "title-text">Personal Website</h2>
-  <p class="text-style"> The website you are currently viewing was coded from scratch by yours truly.
-    Primarily using HTML and CSS, while I haven't been using these two launguages very long I did learn my 
-    skills from readings written by Jon Duckett, and various other sources. 
-  </p>
+  <div class ="layout">
+    
+    <div class="grid-boxes">
+      <img src="images/python-pic.png"  class="grid-image">
+      <p class ="grid-text">Python</p>
+    </div>
 
-  <h2 class = "title-text">Project C.I.M </h2>
-  <p class="text-style"> 
-    CIM is being developed to become a voice activated assistant, and currently can complete tasks such as voice 
-    dictation, searching on the internet, etc. The end goal is for CIM to be a an assistive programming tool. CIM 
-    has so far been written in Python, using libraries such as speech_recognition, pysttx3, etc.
-  </p>
+    <div class="grid-boxes">
+      <img src="images/cpp-image.png"  class="grid-image">
+      <p class ="grid-text">C++</p>
+    </div>
+    
 
-  <h2 class = "title-text">Sound Board</h2>
-  <p class="text-style"> 
-    The sound board was written using pythons tkinter library to create a GUI interface with a dynamic keybind system.
-    We used the keybind system to bind various keys to user given sounds. Additionally,
-  </p>
+    <div class="grid-boxes">
+      <img src="images/wed-dev.png"  class="grid-image">
+      <p class ="grid-text">Web Dev</p>
+    </div>
+ 
+
+    <div class="grid-boxes">
+      <img src="images/java-image.png"  class="grid-image">
+      <p class ="grid-text">Java</p>
+    </div>
+
+
+    <div class="grid-boxes">
+      <img src="images/research-image.png"  class="grid-image">
+      <p class ="grid-text">Research & Reports</p>
+    </div>
+
+
+    <div class="grid-boxes">
+      <img src="images/personal-image.png"  class="grid-image">
+      <p class ="grid-text">Personal</p>
+    </div>
+
+  </div>
   
   
 
