--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html style="background-color: rgb(24, 23, 23);">
 
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/general.css">
     <link rel="icon" href="images/updatedlogo.ico" type="image/x-icon">
+
+  
 
     <!-- Importing a google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
 
     <title>
       Jacobs Lounge
