--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,8 @@
 <html style="background-color: rgb(24, 23, 23);">
 
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/resume.css">
+    <link rel="stylesheet" href="styles/general.css">
     <link rel="icon" href="images/updatedlogo.ico" type="image/x-icon">
 
 
