Animation To Homepage
Beginning to implement an introductory qoute scene

--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
+
+
+  <div class="rotating-qoutes">
+
+    <div style="--i:1;" class="qoute-container">
+      <p class ="qoute">“Build your own dreams, or someone else will hire you to build theirs.” </p>
+      <p class ="speaker">&#45; Farraj Gray</p>
+
+    </div>
+
+    <div style="--i:2;" class="qoute-container"></div>
+      <p class ="qoute">“When you know what you want, and want it bad enough, you’ll find a way to get it.”</p>
+      <p class ="speaker">&#45; Jim Rohn</p>
+
+    <div style="--i:3;" class="qoute-container"></div>
+      <p class ="qoute"></p>
+      <p class ="speaker"> &#45; Robert Louis Stevenson
+      </p>
+
+  </div>
   
    
 
