Major Rework of Homepage
-finished rotational quote theme
-turning about me into a more neat sub-section

--- a/index.html
+++ b/index.html
@@ -36,37 +36,34 @@
   </nav>
 
 
-  <div class="rotating-qoutes">
-
-    <div style="--i:1;" class="qoute-container">
-      <p class ="qoute">“Build your own dreams, or someone else will hire you to build theirs.” </p>
-      <p class ="speaker">&#45; Farraj Gray</p>
-
-    </div>
-
-    <div style="--i:2;" class="qoute-container"></div>
-      <p class ="qoute">“When you know what you want, and want it bad enough, you’ll find a way to get it.”</p>
-      <p class ="speaker">&#45; Jim Rohn</p>
-
-    <div style="--i:3;" class="qoute-container"></div>
-      <p class ="qoute"></p>
-      <p class ="speaker"> &#45; Robert Louis Stevenson
-      </p>
-
-  </div>
+  
   
    
 
   <div class="main-image-div">
-    <img class ="main-image-style" src="images/background_image">
+    <img class ="main-image-style" src="images/new_splash.jpg">
     <h1 class="main-image-text">Home</h1>
   </div>
 
-  <h2 class = "title-text"> About Me</h2>
+  <div class="rotating-qoutes">
+
+    <div id= "qoute-box" class="qoute-container">
+      <p id="qouteEl" class ="qoute">“Build your own dreams, or someone else will hire you to build theirs.” </p>
+      <p id= "speakerEl" class ="speaker">&#45; Farraj Gray</p>
+
+
+  </div>
+
+
+  
   <div class="about-me-div">
+    <h2 class = "title-text"> About Me</h2>
     <div class =  "image-box">
       <img class= "about-me-image" src="images/headshot.png">
     </div>
+
+   
+    
     
     <p class="about-me-text">
       Howdy, my name is Jacob Jones, and I am a computer science major preparing for my Junior Year. Some current projects of mine include a Virtual Assistant,
@@ -77,7 +74,9 @@
   </div>
 
   <!-- at bottom due as good practice-->
-  <script></script>
+  <script src="scripts/index.js">
+  </script>
+
 </body>
 
 </html>
