--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
    
 
   <div class="main-image-div">
-    <img class ="main-image-style" src="images/background_image">
+    <img class ="main-image-style" src="images/new_splash.jpg">
     <h1 class="main-image-text">Projects</h1>
   </div>
 
