--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
      
   
     <div class="main-image-div">
-      <img class ="main-image-style" src="images/background_image">
+      <img class ="main-image-style" src="images/new_splash.jpg">
       <h1 class="main-image-text">Resume</h1>
     </div>
     
