More changes to home page
Added more animation.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
   
-  <div class="about-me-div">
+  <div id="bouncy-box" class="about-me-div">
     <h2 class = "title-text"> About Me</h2>
     <div class =  "image-box">
       <img class= "about-me-image" src="images/headshot.png">
