Updates to homescreen
General homescreen is structured

--- a/index.html
+++ b/index.html
@@ -57,21 +57,23 @@
 
 
   <div class="homepage-layout">
-    <div style=" --i:1;" class="home-boxes" - ><a href="#test">Scroll to top</a></div>
-    <div style=" --i:2;" class="home-boxes" ></div>
-    <div style=" --i:3;" class="home-boxes" ></div>
+    <a style=" --i:1;" class="home-boxes"  href="#about-me">Scroll to top</a>
+    <a style=" --i:2;" class="home-boxes"  href="#fun-facts">Scroll to top</a>
+    <a style=" --i:3;" class="home-boxes"  href="#fun-button">Scroll to top</a>
   </div>
 
   
-  <div id ="About-Me" class="main-container">
-
-  </div>
-  <div id ="Unknown" class="main-container">
-
+  <div  class="main-container">
+    <img id="image-carosel" class="about-me-image" src="images/headshot.png">
+    <h2 id ="about-me" > About Me</h2>
   </div>
 
-  <div id ="Fun Facts" class="main-container">
+  <div id ="fun-facts" class="main-container">
     
+  </div>
+
+  <div id ="fun-button" class="main-container">
+
   </div>
   
 
