Added New Background
New background-image

--- a/index.html
+++ b/index.html
@@ -57,15 +57,18 @@
 
 
   <div class="homepage-layout">
-    <a style=" --i:1;" class="home-boxes"  href="#about-me">Scroll to top</a>
-    <a style=" --i:2;" class="home-boxes"  href="#fun-facts">Scroll to top</a>
-    <a style=" --i:3;" class="home-boxes"  href="#fun-button">Scroll to top</a>
+    <a style=" --i:1;" class="home-boxes"  href="#about-me">About Me</a>
+    <a style=" --i:2;" class="home-boxes"  href="#fun-facts">Fun Facts</a>
+    <a style=" --i:3;" class="home-boxes"  href="#fun-button">Fun Button</a>
   </div>
 
   
   <div  class="main-container">
     <img id="image-carosel" class="about-me-image" src="images/headshot.png">
-    <h2 id ="about-me" > About Me</h2>
+    <h2 id ="about-me" class="homepage-header" > About Me</h2>
+    <p class="homepage-texts">
+      
+    </p>
   </div>
 
   <div id ="fun-facts" class="main-container">
