Major Updates to Homepage+Resume
Updating resume page for a more clean look.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!--<img  src="background_image.jpeg" alt="Coding">-->
 <!-- Everything that is visible on the page will go inside of the body element-->
 <body>
-  <nav>
+  <nav id = "banner">
     <label class ="logo">Jacob's Lounge</label>
     <ul>  
       <li><a class="active" href="index.html">Home</a></li>
@@ -34,6 +34,7 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
+  
 
 
   
@@ -67,16 +68,35 @@
     <img id="image-carosel" class="about-me-image" src="images/headshot.png">
     <h2 id ="about-me" class="homepage-header" > About Me</h2>
     <p class="homepage-texts">
-      
+      Howdy, my name is Jacob Jones, and yes I do say hello like that. As you may
+       guess I am from South Texas, in a coastal city called Corpus Christi. Most 
+       things to do growing up in Corpus were fishing, at home hobbies, and a lot 
+       of various restaurants I mean like a lot. That being said I had to grow up 
+       creative, and a lot of my creativity is born of my natural curiosities and 
+       enjoyment of learning. I got into programming my second year of highschool, 
+       and have maintained steady coursework to improve my skill since then. However, 
+       despite this I would honestly say my biggest passion is problem solving, and then 
+       coding of course. I truly see my future profession as an artform beautifully 
+       contrived using practical mathematics, and logic. Outside of my degree, I enjoy
+        drawing, cooking, fishing, gardening, reading, etc. I'd like to consider myself 
+        a jack of all trades, and a lifelong learner. My dream is to become a software developer
+         for Amazon. Mainly, due to the fact I feel they will be a workplace where I am always 
+         challenged to learn new things, and keep a forward thinking mindset and appreciate the 
+         final product for the end user. Please enjoy the rest of the site. There are many small 
+         details etched to this work in progress site.
     </p>
-  </div>
 
-  <div id ="fun-facts" class="main-container">
+    <p class = "carosel-texts" id = "carosel-words">Image text</p>
+    <a class="back-to-top" href="#banner"> To Top </a>
     
   </div>
 
-  <div id ="fun-button" class="main-container">
+  <div id ="fun-facts" class="main-container">
+    <a class="back-to-top" href="#banner"> To Top </a>
+  </div>
 
+  <div id ="fun-button" class="main-container">
+    <a class="back-to-top" href="#banner"> To Top </a>
   </div>
   
 
