A lot has been added
A lot has been added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div class="homepage-layout">
     <a style=" --i:1;" class="home-boxes"  href="#about-me">About Me</a>
     <a style=" --i:2;" class="home-boxes"  href="#fun-facts">Fun Facts</a>
-    <a style=" --i:3;" class="home-boxes"  href="#fun-button">Fun Button</a>
+    <a style=" --i:3;" class="home-boxes"  href="#fun-button">Work With Me</a>
   </div>
 
   
@@ -85,13 +85,27 @@
          final product for the end user. Please enjoy the rest of the site. There are many small 
          details etched to this work in progress site.
     </p>
-
     <p class = "carosel-texts" id = "carosel-words">Image text</p>
     <a class="back-to-top" href="#banner"> To Top </a>
-    
   </div>
 
   <div id ="fun-facts" class="main-container">
+    <h2 id ="about-me" class="homepage-header" >Fun Facts</h2>
+    <ul class="fun-fact-style">
+      <li class="fun-list">
+        &#8226; I completely and utterly had no intention to fall in love with computer science 
+        the way I have. I don't mean that to be sappy, I took it for a blow off credit in highschool.
+        I even made sure the class was a blow off ahead of time. Well the teach that had been there for 30
+        years or so had retired. A new one(who is now number 2 in the state of texas for AP text scores) 
+        who pushed us, and we were hooked.
+         </li>
+      <li class="fun-list">
+        &#8226; 
+       </li>
+      <li class="fun-list">&#8226;  </li>
+      <li class="fun-list">&#8226;  </li>
+    </ul>
+    
     <a class="back-to-top" href="#banner"> To Top </a>
   </div>
 
