Finalized Resume Page
Resume page is now good enough for display.

--- a/projects.html
+++ b/projects.html
@@ -40,10 +40,10 @@
 
   <div class ="layout">
     
-    <div class="grid-boxes">
+    <a class="grid-boxes">
       <img src="images/python-pic.png"  class="grid-image">
       <p class ="grid-text">Python</p>
-    </div>
+    </a>
 
     <div class="grid-boxes">
       <img src="images/cpp-image.png"  class="grid-image">
