--- a/resume.html
+++ b/resume.html
@@ -62,6 +62,26 @@
           Skills
         </h3>
 
+        <!-- Rotating icon box structure-->
+        <div class="rotating-icons-container">
+          <div style=" --i:0;" class="icon-image-container">
+            <img class = "icon-image-style" src =images/python-pic.png>
+            <p class = 'icon-text'>Python</p>
+          </div>
+          <div style=" --i:1;" class="icon-image-container">
+            <img class = "icon-image-style" src =images/java-image.png>
+            <p class = 'icon-text'>Java</p>
+          </div>
+          <div style=" --i:2;" class="icon-image-container">
+            <img class = "icon-image-style" src =images/wed-dev.png>
+            <p class = 'icon-text'>WebDev</p>
+          </div>
+          <div style=" --i:3;" class="icon-image-container">
+            <img class = "icon-image-style" src =images/cpp-image.png>
+            <p class = 'icon-text'>C++</p>
+          </div>
+
+        </div>
         <ul class="list-text">
           <li class = "list-spacing">&#8226; Programming Languages: Python, Java, C++, Javascript</li>
           <li class = "list-spacing">&#8226; Technical Skills: Documentation, Testing, Dubugging, Hardware Troubleshooting,
@@ -70,6 +90,7 @@
           <li class = "list-spacing"> &#8226; Soft Skills: Teamwork, Communication, Problem Solving, Adaptability, Detail Oriented</li>
 
         </ul>
+        
 
       </div>
 
@@ -91,7 +112,7 @@
         <p class = "experience-role-text" >Student Worker</p>
         <ul class = "experience-list-text">
           <li class="list-spacing">&#8226; Maintain productivity efficiency in the workplace.</li>
-          <li class="list-spacing">&#8226; Consistently resolving or investigationg technological issues.</li>
+          <li class="list-spacing">&#8226; Consistently resolving or investigating technological issues.</li>
           <li class="list-spacing">&#8226; Remain Professional and courteous to clients</li>
           <li class="list-spacing">&#8226; Flexibility, and adaptablity to learn on the spot.</li>
           <li class="list-spacing">&#8226; Remain efficient during remote work.</li>
@@ -105,7 +126,7 @@
     </div>
   
     <!-- at bottom as its good practice-->
-    <script></script>
+    <script src="resume.js"></script>
   </body>
   
   </html>
