--- a/index.html
+++ b/index.html
@@ -91,19 +91,28 @@
 
   <div id ="fun-facts" class="main-container">
     <h2 id ="about-me" class="homepage-header" >Fun Facts</h2>
-    <ul class="fun-fact-style">
-      <li class="fun-list">
+    <ul class="homepage-texts">
+      <li class="list-spacing">
         &#8226; I completely and utterly had no intention to fall in love with computer science 
-        the way I have. I don't mean that to be sappy, I took it for a blow off credit in highschool.
-        I even made sure the class was a blow off ahead of time. Well the teach that had been there for 30
-        years or so had retired. A new one(who is now number 2 in the state of texas for AP text scores) 
-        who pushed us, and we were hooked.
+        the way I have. I don't mean that to be sappy, I took it solely to fill a credit in highschool.
+        I even heard the teacher that had been teaching the class, made the class easy. Well the teacher
+         that had been there for 30
+        years or so had retired. A new Teacher(who is now number 2 in the state of Texas for AP test scores) 
+        who pushed everyone in his class to think and learn for themselves, to be creative, and to use the right tool
+        for the job took his place. He got a lot of his students hooked on computer science, I being one of the many.
          </li>
-      <li class="fun-list">
-        &#8226; 
+      <li class="list-spacing">
+        &#8226; I am a very competitive person mainly used as a way to make things more fun, and who doesn't like to be
+        good at things? 
        </li>
-      <li class="fun-list">&#8226;  </li>
-      <li class="fun-list">&#8226;  </li>
+      <li class="list-spacing">&#8226; Overall, I'd say I'm a very open minded person, and if nothing else I enjoy
+        learning others opinions of the world.  </li>
+      <li class="list-spacing">&#8226; My truest passion is cooking, but not for others, or for any monetary gain. I 
+        simply enjoy the action, the experiement, and seeing people I care about enjoy the food I make for them.
+        That and I get to experiment with new flavors, and styles of cooking all the time. This meaning I get exactly
+        what I want when I want it.
+        
+      </li>
     </ul>
     
     <a class="back-to-top" href="#banner"> To Top </a>
