--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div class="homepage-layout">
     <a style=" --i:1;" class="home-boxes"  href="#about-me">About Me</a>
     <a style=" --i:2;" class="home-boxes"  href="#fun-facts">Fun Facts</a>
-    <a style=" --i:3;" class="home-boxes"  href="#fun-button">Work With Me</a>
+    <a style=" --i:3;" class="home-boxes"  href="#fun-button">Short Message</a>
   </div>
 
   
@@ -82,16 +82,23 @@
         a jack of all trades, and a lifelong learner. My dream is to become a software developer
          for Amazon. Mainly, due to the fact I feel they will be a workplace where I am always 
          challenged to learn new things, and keep a forward thinking mindset and appreciate the 
-         final product for the end user. Please enjoy the rest of the site. There are many small 
-         details etched to this work in progress site.
+         final product for the end user. Please look through my website if you'd to learn more about me, and I am
+         excited to meet those who reach out!
     </p>
     <p class = "carosel-texts" id = "carosel-words">Image text</p>
     <a class="back-to-top" href="#banner"> To Top </a>
   </div>
 
   <div id ="fun-facts" class="main-container">
+
+    <img id="fun-image" class="about-me-image" src="images/headshot.png">
+
+    <p class = "carosel-texts" id = "fun-carosel">Image text</p>
+
     <h2 id ="about-me" class="homepage-header" >Fun Facts</h2>
+
     <ul class="homepage-texts">
+
       <li class="list-spacing">
         &#8226; I completely and utterly had no intention to fall in love with computer science 
         the way I have. I don't mean that to be sappy, I took it solely to fill a credit in highschool.
@@ -101,12 +108,16 @@
         who pushed everyone in his class to think and learn for themselves, to be creative, and to use the right tool
         for the job took his place. He got a lot of his students hooked on computer science, I being one of the many.
          </li>
+
       <li class="list-spacing">
         &#8226; I am a very competitive person mainly used as a way to make things more fun, and who doesn't like to be
         good at things? 
        </li>
+
       <li class="list-spacing">&#8226; Overall, I'd say I'm a very open minded person, and if nothing else I enjoy
-        learning others opinions of the world.  </li>
+        learning others opinions of the world. 
+       </li>
+
       <li class="list-spacing">&#8226; My truest passion is cooking, but not for others, or for any monetary gain. I 
         simply enjoy the action, the experiement, and seeing people I care about enjoy the food I make for them.
         That and I get to experiment with new flavors, and styles of cooking all the time. This meaning I get exactly
@@ -119,6 +130,16 @@
   </div>
 
   <div id ="fun-button" class="main-container">
+    <h4 class="short-message-header" >
+      Short Message
+    </h4>
+
+    <p class="short-message-text"> 
+      This website was created for two very exciting reasons. One to be the first piece of my developement portfolio,
+      and two act as a hub for my other projects. Please note the site itsef is not yet finished but is still a very much so 
+      in progress, but I have so far put much effort into making all of it's entirety pleasing to the eye. Thank you for
+      your time, and please enjoy. 
+    </p>
     <a class="back-to-top" href="#banner"> To Top </a>
   </div>
   
