--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
   <div class="main-image-div">
     <img class ="main-image-style" src="images/new_splash.jpg">
-    <h1 class="main-image-text">Home</h1>
+    <h1 >Home</h1>
+    <h1 >Home</h1>
   </div>
 
   <div class="rotating-qoutes">
@@ -118,10 +119,8 @@
         learning others opinions of the world. 
        </li>
 
-      <li class="list-spacing">&#8226; My truest passion is cooking, but not for others, or for any monetary gain. I 
-        simply enjoy the action, the experiement, and seeing people I care about enjoy the food I make for them.
-        That and I get to experiment with new flavors, and styles of cooking all the time. This meaning I get exactly
-        what I want when I want it.
+      <li class="list-spacing">&#8226; My secret passion is cooking, but not for others, or for any monetary gain. I 
+        simply enjoy the action, the experiement, and the result.
         
       </li>
     </ul>
