--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
   <div class="main-image-div">
     <img class ="main-image-style" src="images/new_splash.jpg">
     <h1 >Home</h1>
-    <h1 >Home</h1>
   </div>
 
   <div class="rotating-qoutes">
@@ -101,22 +100,17 @@
     <ul class="homepage-texts">
 
       <li class="list-spacing">
-        &#8226; I completely and utterly had no intention to fall in love with computer science 
-        the way I have. I don't mean that to be sappy, I took it solely to fill a credit in highschool.
-        I even heard the teacher that had been teaching the class, made the class easy. Well the teacher
-         that had been there for 30
-        years or so had retired. A new Teacher(who is now number 2 in the state of Texas for AP test scores) 
-        who pushed everyone in his class to think and learn for themselves, to be creative, and to use the right tool
-        for the job took his place. He got a lot of his students hooked on computer science, I being one of the many.
+        &#8226; My intention was never to become a computer scientist. I took the course as a required tech credit
+        in my sophomore year of highschool, and have been immersed in the discipline ever since.
          </li>
 
       <li class="list-spacing">
-        &#8226; I am a very competitive person mainly used as a way to make things more fun, and who doesn't like to be
-        good at things? 
+        &#8226; I learned how to build a computer my freshman year of college, and I love christmas so I made the
+        color scheme read and green.
        </li>
 
-      <li class="list-spacing">&#8226; Overall, I'd say I'm a very open minded person, and if nothing else I enjoy
-        learning others opinions of the world. 
+      <li class="list-spacing">&#8226; In addition to programming, drawing holds a special interest to me. I prefer to 
+        attempt realism than to draw comically.
        </li>
 
       <li class="list-spacing">&#8226; My secret passion is cooking, but not for others, or for any monetary gain. I 
