No Nav Buttons On Mobile ATF
Test to fix the nav bar buttons on mobile from working.

--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
   <nav>
     <label class ="logo">Jacob's Lounge</label>
     <ul>  
-      <li><a href="index.html">Home</a></li>
-      <li><a href="resume.html">Resume</a></li>
-      <li><a  href="projects.html">Projects</a></li>
-      <li><a class="active" href="contact.html">Contact</a></li>
+      <li><a href="https://jacobslounge.net/index.html">Home</a></li>
+      <li><a href="https://jacobslounge.net/resume.html">Resume</a></li>
+      <li><a  href="https://jacobslounge.net/projects.html">Projects</a></li>
+      <li><a class="active" href="https://jacobslounge.net/ontact.html">Contact</a></li>
     </ul>
   </nav>
   
