small changes and improved code
Added more concepts such as rem, and many other small changes, and resolved a sizing error where a single div was acting as a container for everything else

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <div id= "qoute-box" class="qoute-container">
       <p id="qouteEl" class ="qoute">“Build your own dreams, or someone else will hire you to build theirs.” </p>
       <p id= "speakerEl" class ="speaker">&#45; Farraj Gray</p>
+    </div>
   </div>
 
 
