Editing Nav Bar
Attempt to remove bug of navbar buttons not appearing after a certain screen size has been reached

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 <body>
   <nav id = "banner">
     <label class ="logo">Jacob's Lounge</label>
+    <a href="#" class="toggle-button">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </a>
     <ul>  
       <li><a class="active" href="index.html">Home</a></li>
       <li><a href="resume.html">Resume</a></li>
