--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html >
 
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/general.css">
     <link rel="icon" href="images/updatedlogo.ico" type="image/x-icon">
@@ -64,9 +68,9 @@
 
 
   <div class="homepage-layout">
-    <a style=" --i:1;" class="home-boxes"  href="#about-me">About Me</a>
-    <a style=" --i:2;" class="home-boxes"  href="#fun-facts">Fun Facts</a>
-    <a style=" --i:3;" class="home-boxes"  href="#fun-button">Short Message</a>
+    <a style=" --i:1;" class="home-boxes" id="aboutBut" href="#about-me">About Me</a>
+    <a style=" --i:2;" class="home-boxes"  id="funBut" href="#fun-facts">Fun Facts</a>
+    <a style=" --i:3;" class="home-boxes"  id="messBut" href="#fun-button">Short Message</a>
   </div>
 
   
@@ -158,3 +162,4 @@
 </body>
 
 </html>
+
