--- a/index.html
+++ b/index.html
@@ -89,11 +89,9 @@
        coding of course. I truly see my future profession as an artform beautifully 
        contrived using practical mathematics, and logic. Outside of my degree, I enjoy
         drawing, cooking, fishing, gardening, reading, etc. I'd like to consider myself 
-        a jack of all trades, and a lifelong learner. My dream is to become a software developer
-         for Amazon. Mainly, due to the fact I feel they will be a workplace where I am always 
-         challenged to learn new things, and keep a forward thinking mindset and appreciate the 
-         final product for the end user. Please look through my website if you'd to learn more about me, and I am
-         excited to meet those who reach out!
+        a jack of all trades, and a lifelong learner. My dream is to one day start my
+        own succuessful software developement company, and create software that makes an positive impact
+        on society.
     </p>
     <p class = "carosel-texts" id = "carosel-words">Image text</p>
     <a class="back-to-top" href="#banner"> To Top </a>
