--- a/contact.html
+++ b/contact.html
@@ -21,14 +21,21 @@
 <!--<img  src="background_image.jpeg" alt="Coding">-->
 <!-- Everything that is visible on the page will go inside of the body element-->
 <body>
-  <nav>
+  <nav class = "navbar" id = "banner">
     <label class ="logo">Jacob's Lounge</label>
-    <ul>  
-      <li><a href="https://jacobslounge.net/index.html">Home</a></li>
-      <li><a href="https://jacobslounge.net/resume.html">Resume</a></li>
-      <li><a  href="https://jacobslounge.net/projects.html">Projects</a></li>
-      <li><a class="active" href="https://jacobslounge.net/ontact.html">Contact</a></li>
-    </ul>
+    <a href="#" class="toggle-button">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </a>
+    <div class ="navbar-links">
+      <ul>  
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
   </nav>
   
    
@@ -67,7 +74,8 @@
 
 
   <!-- at bottom due as good practice-->
-  <script></script>
+  <script src="scripts/general.js">
+  </script>
 </body>
 
 </html>
