Improved mobile User Experience
Improved nav, and resume pages aswell

--- a/resume.html
+++ b/resume.html
@@ -61,7 +61,7 @@
     <div class = "custom-resume">
       <div class="resume-container">
         <h2 class="resume-header"> Jacob Jones </h2>
-        <p class="resume-text">genjacob20@gmail.com &#124; 361-460-2493 &#124; 802 Purdue Rd, Corpus Christi, TX, 78418 </p>
+        <p class="resume-text">genjacob20@gmail.com  &#124; 802 Purdue Rd, Corpus Christi, TX, 78418 </p>
       </div> 
 
       <div class="resume-container">
